# thinlog

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  publish.yml
doc/: api.rst  conf.py  configuration.rst  filters.rst  formatters.rst  handlers.rst  index.rst  quickstart.rst
doc/_static/: custom.css
src/thinlog/: __init__.py  __version__.py  bootstraping.py  helper.py  log.py  registered_loggers.py  settings.py  util.py
src/thinlog/filters/: __init__.py  assigner.py  blocklist.py  whitelist.py
src/thinlog/formatters/: __init__.py  json.py  msg.py  telegram.py
src/thinlog/handlers/: __init__.py  ctx_print.py  json_http.py  telegram.py
