[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "thinlog"
description = "Log toolkit"
keywords = [
    "log",
    "logging",
]
dynamic = [
    "version",
    "readme",
]
dependencies = [
    "rich >=14.1.0",
    "httpx >=0.28.1",
    "structlog >=25.4.0",
]
authors = [
    { name = "Mohammad Puyandeh", email = "mohammadpuyandeh@gmail.com" },
]
maintainers = [
    { name = "Mohammad Puyandeh", email = "mohammadpuyandeh@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "isort >=6.0.1",
    "ruff >=0.12.11",
    "mypy[reports] >=1.17.1",
    "build >=1.3.0",
    "twine >=6.1.0",
]
doc = [
    "sphinx >=8.2.3",
    "sphinx-copybutton >=0.5.2",
    "sphinx-book-theme >=1.1.4",
    "sphinx_design >=0.6.1",
]

[project.urls]
homepage = "https://github.com/minfrastructure/thinlog"
documentation = "https://minfrastructure.github.io/thinlog"
repository = "https://github.com/minfrastructure/thinlog"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
"*" = [
    "py.typed",
]

[tool.setuptools.dynamic.version]
attr = "thinlog.__version__.__version__"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
]

[tool.distutils.build]
build-base = ".caches/build"

[tool.distutils.egg-info]
egg-base = ".caches"

[tool.isort]
profile = "black"
lines_after_imports = 2
src_paths = "internal"

[tool.mypy]
platform = "linux"
warn_redundant_casts = true
warn_unused_ignores = true
incremental = true
no_implicit_reexport = true
follow_imports = "normal"
ignore_missing_imports = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true
warn_no_return = true
no_implicit_optional = true
strict_optional = true
ignore_errors = false
allow_untyped_globals = false
allow_redefinition = true
local_partial_types = true
implicit_reexport = false
show_error_context = true
show_error_codes = true
show_absolute_path = false
pretty = true
color_output = true
error_summary = true
cache_dir = ".caches/.mypy_cache"
strict_concatenate = true
strict_equality = true
strict = true
no_silence_site_packages = false
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_explicit = false
disallow_any_decorated = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_unused_configs = true
verbosity = 0
any_exprs_report = ".mypy_reports"
html_report = ".mypy_reports"
linecount_report = ".mypy_reports"
linecoverage_report = ".mypy_reports"
lineprecision_report = ".mypy_reports"
txt_report = ".mypy_reports"

[tool.ruff]
line-length = 120
